--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "dotenv": "^8.2.0",
         "firebase-admin": "^9.4.1",
         "fs": "^0.0.1-security",
+        "heroku-client": "^3.1.0",
         "moment": "^2.29.1"
     },
     "devDependencies": {
