--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "firebase-admin": "^9.4.1",
         "fs": "^0.0.1-security",
         "heroku-client": "^3.1.0",
-        "moment": "^2.29.1"
+        "moment-timezone": "^0.5.32"
     },
     "devDependencies": {
         "nodemon": "^2.0.4"
